------------------------------------------------------------------------
r1544 | gaser | 2020-01-05 21:35:39

Changed paths:
M       CHANGES.txt
M       cat_surf_resamp.m
M       cat_surf_resamp_freesurfer.m
D       cat_vol_pbt2.m

Changed: Suppress annoying subscripts warning in combination with 
spm_mesh_join.m
------------------------------------------------------------------------
r1543 | gaser | 2019-12-30 17:20:10 +0100 (Mo, 30 Dez 2019) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

Fixed: Removed some inconsistencies in cat_surf_results.m.

------------------------------------------------------------------------
r1542 | gaser | 2019-12-30 16:47:26 +0100 (Mo, 30 Dez 2019) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

Fixed: Global parameter H was removed by accident.

------------------------------------------------------------------------
r1541 | gaser | 2019-12-30 16:35:48 +0100 (Mo, 30 Dez 2019) | 8 lines

Changed paths:
M       CHANGES.txt
M       cat_stat_confplot_spm.m
M       cat_surf_results.m

Changed: Undo renaming of global parameter H in some functions und rather
delete variable with flag -globalvar after closing.

------------------------------------------------------------------------
r1540 | gaser | 2019-12-30 15:50:59 +0100 (Mo, 30 Dez 2019) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat_stat_confplot_spm.m
M       cat_surf_results.m

(1) Changed: Renamed global parameter H in some functions to not interfere
    between these functions.
(3) Changed: Use new approach to overlay atlas borders that results in finer 
    lines in cat_surf_results.m
(4) Fixed: Subject factors were only available in repeated anova designs in 
    cat_stat_confplot_spm.m.

------------------------------------------------------------------------
r1539 | gaser | 2019-12-30 09:46:05 +0100 (Mo, 30 Dez 2019) | 19 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_main.m